# view-patterns-snippet

./: README.md  cabal.project  view-patterns-snippet.cabal
app/: Main.hs
