cabal-version:      3.12
name:               view-patterns-snippet
version:            0.1.0.0
license:            NONE
author:             Phil de Joux
maintainer:         philderbeast@gmail.com
build-type:         Simple
common warnings
    ghc-options: -Wall

executable view-patterns-snippet
    import:           warnings
    main-is:          Main.hs
    build-depends:
      , aeson
      , aeson-shim
      , base >=4.14.3.0
      , base-compat
      , bytestring
      , text
      , unordered-containers
    hs-source-dirs:   app
    default-language: Haskell2010
